<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChooseConversionActivity"
    android:padding="@dimen/large_margin">


    <androidx.wear.widget.BoxInsetLayout
        android:id="@+id/app_screen_init"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:boxedEdges="left|right">

            <ImageView
                android:id="@+id/logo_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/views_logo_size"
                android:layout_marginTop="@dimen/views_logo_size"
                android:contentDescription="@string/logo_image"
                android:src="@drawable/app_logo" />

            <TextView
                style="@style/Theme.UnitEase.PrimaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/extra_small_margin"
                android:text="@string/welcome_text"
                app:boxedEdges="all" />

        </LinearLayout>

    </androidx.wear.widget.BoxInsetLayout>

    <TextView
        android:id="@+id/custom_category_text"
        style="@style/Theme.UnitEase.SecondaryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/custom"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_screen_init"
        app:layout_constraintBottom_toTopOf="@id/custom_category_button_1"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/custom_category_button_1"
        android:layout_width="0dp"
        android:layout_height="@dimen/rect_button_height"
        app:layout_constraintTop_toBottomOf="@id/custom_category_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/custom_category_button_2"
        app:layout_constraintBottom_toTopOf="@id/all_options_category_text"
        android:layout_marginEnd="@dimen/extra_small_margin"
        android:text="@string/length"
        android:gravity="center"
        app:icon="@drawable/length_logo"
        style="@style/Theme.UnitEase.BaseButtonStyle"
        />




    <com.google.android.material.button.MaterialButton
        android:id="@+id/custom_category_button_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/extra_small_margin"
        app:layout_constraintStart_toEndOf="@id/custom_category_button_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/custom_category_button_1"
        app:layout_constraintBottom_toBottomOf="@id/custom_category_button_1"
        style="@style/Theme.UnitEase.BaseButtonStyle"
        android:text="@string/weight"
        app:icon="@drawable/weight_logo"/>


    <TextView
        android:id="@+id/all_options_category_text"
        style="@style/Theme.UnitEase.SecondaryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/all_options"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_category_button_1" />

    <androidx.wear.widget.WearableRecyclerView
        android:id="@+id/rvChooseConversation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/all_options_category_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:overScrollMode="never">


    </androidx.wear.widget.WearableRecyclerView>



</androidx.constraintlayout.widget.ConstraintLayout>